[package]
name = "dumb-caching-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive", "env"] }
digest = "0.10.7"
dotenvy = "0.15.7"
jemallocator = "0.5.4"
moka = { version = "0.12.8", features = ["future"] }
reqwest = { version = "0.12.7", features = ["rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
service-helpe-rs = { git = "https://github.com/Scoopit/service-helpe-rs.git", tag = "0.4.0", features = [
    "tokio",
    "metrics",
    "axum",
    "tracing",
] }
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
